# meds-task-generation

./: DESIGN.md  NOTICE  README.md  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  python-build.yaml  tests.yaml
src/meds_random_task_sampler/: __init__.py  __main__.py  cli.py  dense_grid.py  generation.py  manifest.py  random_sample.py  schema.py  seeds.py  validation.py
tests/: __init__.py  conftest.py  test_generation.py  test_public_api.py  test_stage0_prediction_times.py  test_stage1_query_distribution.py  test_stage2_patient_contexts.py  test_stage3_build_index.py  test_stage4_labeling.py
