[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm>=9.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meds-random-task-sampler"
dynamic = ["version"] # Makes setuptools-scm manage the version
authors = [
  {name="florian6973"},
]
description = "Model-independent random query-task sampling for MEDS datasets"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Change if not using MIT license
    "Operating System :: OS Independent",
]
dependencies = [
  "flexible-schema",
  "meds>=0.4,<0.5",
  "numpy>=2,<3",
  "polars>=1.35,<2",
  "pyarrow>=17,<22",
  "pyyaml>=6,<7",
]

[dependency-groups]
dev = [
  "pre-commit<4", "ruff", "pytest", "pytest-cov", "pretty-print-directory",
  # shfmt-py bundles the `shfmt` binary used by the mdformat-shfmt pre-commit
  # hook. Pinning it here (in addition to the pre-commit hook's
  # additional_dependencies) gives a single source of truth and keeps local
  # `uv run mdformat ...` runs consistent with CI pre-commit runs.
  "shfmt-py==3.12.0.2",
] # Add your development (lint, test) dependencies here
docs = [] # Add your documentation dependencies here (I recommend mkdocs-material)

[tool.setuptools_scm] # Required for setuptools-scm to work, even if empty

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies] # Add any optional dependencies here, installable via `pip install .[extra]`

[tool.pytest.ini_options] # Default pytest options
addopts = [
  "--color=yes",
  "--doctest-modules", # Ensures that doctest runs
  "--ignore=docs",
  "--ignore=AGENTS.md",
  "--ignore=CONTRIBUTORS.md",
  "--doctest-glob=*.md",
  "--doctest-continue-on-failure",
]
markers = [] # Add any custom pytest markers here
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[project.urls]
Homepage = "https://github.com/florian6973/meds-random-task-sampler"
Issues = "https://github.com/florian6973/meds-random-task-sampler/issues"

[tool.ruff] # Ruff configuration for linting and formatting
target-version = "py312"
line-length = 110
extend-exclude = ["docs/index.md"]

# Enable linters
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "N",   # pep8-naming
    "D",   # docstring-checker
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files
"test_*" = ["DTZ001"]  # Ignore datetimez in test files

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["*MEDS*", "*NRT*", "D", "L"] # Allow common abbreviations; "D" is used for distributions/datasets

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["meds_random_task_sampler"]
